--- a/index.html
+++ b/index.html
@@ -188,14 +188,20 @@
 							<h2>NEWS</h2>
 							<p><a href="https://www.rts.ch/play/tv/emission/t-t-c--toutes-taxes-comprises?id=14235">A recent RTS program about Crans Montana, mentions RayShaper.</a></p>
 						</header>
-<!-- 						<div class="inner narrow">
-							<button class="button"><a href="https://www.rts.ch/play/tv/emission/t-t-c--toutes-taxes-comprises?id=14235">Read</a></button>
-							<form action="http://cool9.loft.party:8000/rayshaper.dmg" method="get">
-								<ul class="actions">
-									<li><button class="button" type="download">Read</button></li>
-								</ul>
-							</form>
-						</div> -->
+						<div class="inner">
+							<div class="row 200%">
+								<div class="4u 12u$(medium)">
+									<img class="news-img" src="images/news01.jpg" alt="" />
+								</div>
+								<div class="4u 12u$(medium)">
+									<img class="news-img" src="images/news02.jpg" alt="" />
+								</div>
+								<div class="4u$ 12u$(medium)">
+									<img class="news-img" src="images/news03.jpg" alt="" />
+								</div>
+							
+							</div>
+						</div>
 					</section>
 
 				<!-- Section -->
