--- a/index.html
+++ b/index.html
@@ -27,12 +27,12 @@
 				// 		</div>\
 				// 		<p></p>\
 				// 		<p class="copyright">&copy; 2020 by RayShaper. All rights reserved.</p>'          
-		  // if (temp !== -1) {
-		  // 	document.getElementById("contact-warp").innerHTML = content_com;
-		  // } else {
-		  // 	document.getElementById("contact-warp").innerHTML = content_ch;
-		  // }
-		  console.log('url', url, temp)
+		  if (temp !== -1) {
+		  	document.getElementById("contact-warp").innerHTML = '<p class="copyright">&copy; 2018 by RayShaper. All rights reserved.</p>';
+		  } else {
+		  	document.getElementById("contact-warp").innerHTML = '<p class="copyright">&copy; 2020 by RayShaper. All rights reserved.</p>';
+		  }
+		  console.log('url', url, temp, 100)
 		  window.dataLayer = window.dataLayer || [];
 		  function gtag(){dataLayer.push(arguments);}
 		  gtag('js', new Date());
