--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
 						<!-- Logo -->
 							<div class="logo">
-								<a href="index.html"><strong>RayShaper</strong>&nbsp  Where the Virtual Becomes Reality</a>
+								<a href="index.html"><strong>RayShaper</strong>&nbsp  Where the Virtual Becomes Reality2</a>
 							</div>
 
 						<!-- Nav -->
