--- a/index.html
+++ b/index.html
@@ -48,218 +48,43 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+		<link rel="stylesheet" href="assets/css/over.css" />
 	</head>
 	<body>
 		<div id="hover" onclick="clickHideImg()">
 			<img id="hover-img" class="news-img" src="" alt="" />
 		</div>
 		<!-- Wrapper -->
-			<div id="wrapper">
+			<div id="wrapper" class="wrapper-contant">
 
 				<!-- Header -->
-					<header id="header" class="alt">
-
-						<!-- Logo -->
-							<div class="logo">
-								<a href="index.html"><strong>RayShaper</strong>&nbsp  Where the Virtual Becomes Reality</a>
-							</div>
-
-						<!-- Nav -->
-							<nav id="nav">
-								<ul>
-									<li><a href="index.html">HOME</a></li>
-									<li><a href="#services" class="more scrolly">SERVICES</a></li>
-									<li><a href="#projects" class="more scrolly">PROJECTS</a></li>
-									<li><a href="#team" class="more scrolly">TEAM</a></li>
-									<li><a href="#event" class="more scrolly">EVENTS</a></li>
-									<li><a href="#news" class="more scrolly">NEWS</a></li>
-									<li><a href="#contact" class="more scrolly">CONTACT</a></li>
-								</ul>
-							</nav>
-
-					</header>
+				<div class="header-contant">
+					<img src="./images/RayShaper.png"/>
+				</div>
 
 				<!-- Banner -->
-					<section id="banner">
+<!-- 					<section id="banner">
 						<div class="content">
 							<h1>Stream Your Event</h1>
 							<h1>Live into</h1>
 							<h1>Virtual Reality</h1>
 						</div>
 						<a href="#services" class="more scrolly">Learn More</a>
-					</section>
-
-				<!-- Section -->
-					<section class="main alt" id="services">
-						<header>
-							<h2>Services</h2>
-							<p>RayShaper manufactures an innovative reconfigurable acquisition system that can produce various types of high quality immersive contents (gigapixel, light field video with 6 degrees of freedom) along with a unique processing and editing software solution.</p>
-							<p>RayShaper provides training programs to integrate its acquisition solution into a number of video production workflows and offers services for creation of immersive contents for promotion, advertisement, educational entertainment and immersive movie production.</p>
-							<p>Rayshaper also provides computer system design, software design and implementation services tailored to it's customers in the video acquistion domain.</p>
-							<p>Finally, Rayshaper provide hosted custom cutting edge computing technology and programmable information services through our website on a per request basis.</p>
-						</header>
-						<div class="inner">
-							<div class="row 200%">
-								<div class="4u 12u$(medium)">
-									<p><span class="image fit"><img src="images/services01.jpg" alt="" /></span><h4>small foot-print 6 DoF camera</h3>A small foot-print 6 DoF camera that is capable of capturing light field information in a compact size with interchangeable lenses.</p>
-								</div>
-								<div class="4u 12u$(medium)">
-									<p><span class="image fit"><img src="images/services02.jpg" alt="" /></span><h4>compound vision camera system</h3>A compound vision camera system providing an equivalent resolution of billions of pixels, or 2 orders of magnitude higher than state-of-the-art single-lens camera systems. </p>
-								</div>
-								<div class="4u$ 12u$(medium)">
-									<p><span class="image fit"><img src="images/services03.jpg" alt="" /></span><h4>post production system</h3>A post production system to efficiently render ultra high resolution 3D 360 degree and immersive light field content in real time with very low latency. </p>
-								</div>
-							
+					</section> -->
+					<section>
+						<div class="content main-contant">
+							<div class="main-word">You get more than what you see</div>
+							<div>shaping the future of computational vision</div>
+							<div class="img-contant">
+								<img src="./images/contant.jpeg" />
 							</div>
 						</div>
 					</section>
-
-				<!-- Section -->
-					<section class="main accent2" id="projects">
-						<header>
-							<h2>Projects</h2>
-							<p>Check out our <a href="https://www.youtube.com/channel/UCKBSAOZx9-qlYQZJBFaZ6tQ">Youtube channel</a> for a selection of projects. Our most recent event is the Fête de la Musique in Shanghai.</p>
-						</header>
-							<table class="projectsTable">
-							  <tr>
-							    <td>
-							        <div class="vid-container vid-container-first">
-								    	<iframe width="560" height="315" src="https://www.youtube.com/embed/i7DS8i-kNRU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									</div>
-									<div class="vid-container">
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/j5_leMF6t7U" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									</div>
-								</td>
-							    <td>							
-									<div class="vid-container vid-container-first">
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/D_bXgi7pQvA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									</div>
-									<div class="vid-container">
-										<iframe width="560" height="315" src="https://www.youtube.com/embed/_zse3fZHhAA" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-									</div>
-								</td>
-							  </tr>
-							</table>
-						</section>
-
-				<!-- Section -->
-					<section class="main" id="team">
-						<header>
-							<h2>Meet the Team</h2>
-							<!--<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam facilisis ante sed etiam magna interdum congue. Sed consequat amet dolor magna consequat. Lorem ipsum dolor amet nullam sed etiam veroeros.</p>-->
-						</header>
-						<div class="inner">
-							<ul class="faces">
-								<li>
-								</li>
-								<li>
-									<span class="image"><img src="images/gene.jpg" alt="Jiangtao Wen" /></span>
-									<h3>Jiangtao Wen, CEO</h3>
-									<p align="justify">RayShaper team is composed of Prof. Touradj Ebrahimi from EPFL , (chairman and CTO), Prof. Gene Wen from Tsinghua University (CEO) and Prof. Erica Han, from South China Agriculture University (COO). A dozen employees are envisaged to be hired in the next 24 months. RayShaper is currently at seed funding stage and plans an increase in capital by the end of 2019.</p>
-								</li>
-								<li>
-								</li>
-							</ul>
-						</div>
-					</section>
-
-					<section class="main accent2 special" id="event">
-						<header>
-							<h2>Events</h2>
-							<p>Montreux Jazz Festival 2019</p>
-						</header>
-						<div class="inner narrow">
-							<div class="row 200%">
-								<div class="4u 12u$(medium)">
-									<p><span class="image fit"><img src="images/event01.jpg" alt="" /></span></p>
-								</div>
-								<div class="4u 12u$(medium)">
-									<p><span class="image fit"><img src="images/event02.jpg" alt="" /></span></p>
-								</div>
-								<div class="4u$ 12u$(medium)">
-									<p><span class="image fit"><img src="images/event03.jpg" alt="" /></span></p>
-								</div>
-							</div>
-						</div>
-						<p>FIBA World Cup </p>
-						<div class="inner narrow">
-							<div class="row 200%">
-								<div class="4u 12u$(medium)">
-									<p><span class="image fit"><img src="images/FIBA01.jpeg" alt="" /></span></p>
-								</div>
-								<div class="4u 12u$(medium)">
-									<p><span class="image fit"><img src="images/FIBA02.jpeg" alt="" /></span></p>
-								</div>
-								<div class="4u$ 12u$(medium)">
-									<p><span class="image fit"><img src="images/FIBA03.jpeg" alt="" /></span></p>
-								</div>
-							</div>
-							<div class="row 200%">
-								<div class="4u 12u$(medium)">
-									<p><span class="image fit"><img src="images/FIBA04.jpeg" alt="" /></span></p>
-								</div>
-								<div class="4u 12u$(medium)">
-									<p><span class="image fit"><img src="images/FIBA05.jpeg" alt="" /></span></p>
-								</div>
-								<div class="4u$ 12u$(medium)">
-									<p><span class="image fit"><img src="images/FIBA06.jpeg" alt="" /></span></p>
-								</div>
-							</div>
-						</div>
-						<div class="inner narrow">
-							<embed id='v_player_cctv' width='100%' height='400' flashvars='videoId=20091109129210&filePath=/flvxml/2009/05/04/&isAutoPlay=true&url=http://app.cctv.com/special/cbox/detail/index.html?guid=edd152d1556e44d993a6c0fe190fc895&vsid=C10616&from=timeline&isappinstalled=0#0&tai=news&configPath=http://js.player.cntv.cn/xml/config/outside.xml&widgetsConfig=http://js.player.cntv.cn/xml/widgetsConfig/common.xml&languageConfig=&hour24DataURL=&outsideChannelId=channelBugu&videoCenterId=edd152d1556e44d993a6c0fe190fc895' allowscriptaccess='always' allowfullscreen='true' menu='true' quality='best' bgcolor='#000000' name='v_player_cctv' src='http://player.cntv.cn/standard/cntvOutSidePlayer.swf' type='application/x-shockwave-flash' lk_mediaid='lk_juiceapp_mediaPopup_1257416656250' lk_media='yes'/>
-						</div>
-					</section>
-
-									<!-- Section -->
-					<section class="main alt special" id="news">
-						<header>
-							<h2>NEWS</h2>
-							<p><a href="https://www.rts.ch/play/tv/emission/t-t-c--toutes-taxes-comprises?id=14235">A recent RTS program about Crans Montana, mentions RayShaper.</a></p>
-							<p><a onclick="clickShowImg('01')">RAYSHAPER SA NEC PLUS ULTRA DE LA CAMÉRA</a></p>
-							<p><a onclick="clickShowImg('02')">Après les stars de cinéma, Crans-Montana drague les start-up</a></p>
-						</header>
-<!-- 						<div class="inner">
-							<div class="row 200%">
-								<div class="4u 12u$(medium)">
-									<img class="news-img" src="images/news01.jpg" alt="" />
-								</div>
-								<div class="4u 12u$(medium)">
-									<img class="news-img" src="images/news02.jpg" alt="" />
-								</div>
-								<div class="4u$ 12u$(medium)">
-									<img class="news-img" src="images/news03.jpg" alt="" />
-								</div>
-							
-							</div>
-						</div> -->
-					</section>
-
-				<!-- Section -->
-					<section class="main accent2 special" id="contact">
-						<header>
-							<h2>Get in touch</h2>
-							<p>We are looking forward to hearing from you and make you a customized offer.</p>
-						</header>
-						<div class="inner narrow">
-							<form action="https://formspree.io/pjunker@rayshaper.ch" method="post">
-								<div class="field half">
-									<input name="name" id="name" placeholder="Name" type="text" />
-								</div>
-								<div class="field half">
-									<input name="_replyto" id="email" placeholder="Email" type="email" />
-								</div>
-								<div class="field">
-									<textarea name="message" id="message" rows="6" placeholder="Message"></textarea>
-								</div>
-								<ul class="actions">
-									<li><button class="button next" type="submit">Send Message</button></li>
-								</ul>
-							</form>
-						</div>
-					</section>
+					<div class="footer-contant">
+						<span>E-mail: info@rayshaper.ch</span>
+					</div>
 				<!-- Footer -->
-					<footer id="footer">
+<!-- 					<footer id="footer">
 						<ul class="icons">
 							<li><a href="mailto:pjunker@rayshaper.ch" class="icon alt fa-envelope-o"><span class="label">Email</span></a></li>
 
@@ -267,8 +92,7 @@
 						<div id="contact-warp" class="contactImfo">
 						</div>
 						<p></p>
-						<p class="copyright">&copy; 2018 by RayShaper. All rights reserved.</p> -->
-					</footer>
+					</footer> -->
 
 			</div>
 
